--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ fetch("http://localhost/photo-gallery/Galeri/albums.json")
   })
   .catch(err => {
     console.error("Albüm listesi yüklenemedi", err);
-    menu.innerHTML = "Albüm listesi yüklenemedi.";
+    menu.innerHTML = "Albüm listesi yüklenemedii.";
   });
 
 // Album yükleme fonksiyonu
