--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ let currentImages = [];
 
 fetch("http://localhost/photo-gallery/Galeri/albums.json")
   .then(res => {
-    if (!res.ok) throw new Error("Albüm listesi yüklenemedi");
+    if (!res.ok) throw new Error("Albüm listesi yüklenemedii");
     return res.json();
   })
   .then(albums => {
