--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
       color: #fff;
       margin-top: 10px;
     }
+    img {
+      user-drag: none;
+      user-select: none;
+      -webkit-user-drag: none;
+      -webkit-user-select: none;
+    }
   </style>
 </head>
 <body>
