--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@ document.addEventListener("dragstart", function(e) {
     e.preventDefault();
   }
 });
+  document.addEventListener("DOMContentLoaded", () => {
+    document.querySelectorAll("img").forEach(img => {
+      img.addEventListener("contextmenu", e => e.preventDefault());
+      img.addEventListener("touchstart", e => e.preventDefault(), { passive: false });
+    });
+  });
 </script>
 
 </body>
