--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     font-family: sans-serif;
     background-color: #555;
   }
+
   #menu {
     position: fixed;
     right: 20px;
@@ -20,6 +21,7 @@
     gap: 10px;
     z-index: 100;
   }
+
   #menu div {
     background: #fff;
     border: 1px solid #ccc;
@@ -27,6 +29,7 @@
     cursor: pointer;
     text-align: center;
   }
+
   #menu div:hover {
     background: #f5f5f5;
   }
@@ -61,12 +64,14 @@
     background: #555;
     padding: 5px;
   }
+
   .photo-box img {
     max-width: 100%;
     max-height: 100%;
     cursor: pointer;
     border: none;
   }
+
   .photo-box img:hover {
     outline: 0px solid #333;
     outline-offset: -2px;
@@ -83,10 +88,12 @@
     flex-direction: column;
     z-index: 1000;
   }
+
   #overlay img {
     max-width: 90vw;
     max-height: 90vh;
   }
+
   #overlay span {
     color: #fff;
     margin-top: 10px;
@@ -113,9 +120,8 @@
     transition: opacity 0.3s ease;
   }
 
-  #overlay:hover #closeBtn,
-  #overlay:hover #prevBtn,
-  #overlay:hover #nextBtn {
+  /* Doğrudan overlay üzerine hover değil, overlay içindeyken tüm çocuk butonları göster */
+  #overlay:hover button {
     opacity: 1;
   }
 
@@ -142,6 +148,7 @@
     background: rgba(255, 255, 255, 0.2);
   }
 </style>
+
 
 
 </head>
