--- a/index.html
+++ b/index.html
@@ -203,17 +203,12 @@
         return res.json();
       })
       .then(albums => {
-        if (albums.length === 0) {
-          menu.innerHTML = "Albüm bulunamadı.";
-          return;
-        }
         albums.forEach(album => {
           const div = document.createElement("div");
           div.textContent = album;
           div.onclick = () => loadAlbum(album);
           menu.appendChild(div);
         });
-        loadAlbum(albums[0]);
       })
       .catch(err => {
         console.error("Albüm listesi yüklenemedi", err);
@@ -286,6 +281,8 @@
 
     overlay.addEventListener("dblclick", (e) => {
       e.preventDefault();
+      overlayImage.style.maxWidth = overlayImage.style.maxWidth === "100%" ? "90vw" : "100%";
+      overlayImage.style.maxHeight = overlayImage.style.maxHeight === "100%" ? "90vh" : "100%";
     });
 
     let lastTouch = 0;
@@ -297,11 +294,36 @@
       lastTouch = now;
     }, { passive: false });
 
-    document.addEventListener("DOMContentLoaded", () => {
-      document.querySelectorAll("img").forEach(img => {
-        img.addEventListener("contextmenu", e => e.preventDefault());
-        img.addEventListener("touchstart", e => e.preventDefault(), { passive: false });
-      });
+    // Kontrollerin görünürlüğü için 2 saniye gecikme
+    let controlTimeout;
+    overlay.addEventListener("click", () => {
+      controlsVisible = !controlsVisible;
+      overlay.classList.toggle("show-controls", controlsVisible);
+      overlay.classList.toggle("hide-controls", !controlsVisible);
+
+      // 2 saniye sonra kontrolleri gizle
+      clearTimeout(controlTimeout);
+      controlTimeout = setTimeout(() => {
+        overlay.classList.remove("show-controls");
+        overlay.classList.add("hide-controls");
+      }, 2000);
+    });
+
+    // Gezinme butonlarını eklemek için sol ve sağ alanlar
+    document.addEventListener("mousemove", (e) => {
+      if (e.clientX < window.innerWidth * 0.25 || e.clientX > window.innerWidth * 0.75) {
+        prevBtn.style.opacity = 1;
+        nextBtn.style.opacity = 1;
+        prevBtn.style.pointerEvents = "auto";
+        nextBtn.style.pointerEvents = "auto";
+
+        setTimeout(() => {
+          prevBtn.style.opacity = 0;
+          nextBtn.style.opacity = 0;
+          prevBtn.style.pointerEvents = "none";
+          nextBtn.style.pointerEvents = "none";
+        }, 1000);
+      }
     });
   </script>
 </body>
